# lidlplus-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
docs/: authelia-mcp-auth.md
lidlbridge/: auth.py  config.py  coupons.py  mcp_server.py  poll.py  scheduler.py  state.py
tests/: conftest.py  test_parsing.py  test_refresh.py  test_tools.py
