[project]
name = "lidlplus-mcp"
version = "0.1.0"
description = "Poll Lidl Plus for new receipts and hand them off to other tools."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "lidlplus-api[auth]>=0.0.4",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lidl-auth = "lidlbridge.auth:main"
lidl-poll = "lidlbridge.poll:main"
lidl-coupons = "lidlbridge.coupons:main"
lidl-mcp = "lidlbridge.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lidlbridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
